2009-07-25 Francesco Fumanti <francesco.fumanti@gmx.net>

    Remove experimental clutter stuff (by Chris Jones)

2009-07-25 Francesco Fumanti <francesco.fumanti@gmx.net>

    Get rid of pango warnings (by Chris Jones)

2009-07-25 Francesco Fumanti <francesco.fumanti@gmx.net>

    Remove two wrong po files

2009-07-25 Francesco Fumanti <francesco.fumanti@gmx.net>

    Add .bzrignore containing MANIFEST file and dist directory

2009-07-25 Francesco Fumanti <francesco.fumanti@gmx.net>

    Remove MANIFEST file and debian directory

2009-03-27 Chris Jones <chris.e.jones@gmail.com>

    Derive label font size from the size of the key itself. Partially solves lp:348483.

2009-03-24 Francesco Fumanti <francesco.fumanti@gmx.net>

    Add TODO file.

2009-03-24 Francesco Fumanti <francesco.fumanti@gmx.net>

    Add NEWS and README file.

2009-03-24 Francesco Fumanti <francesco.fumanti@gmx.net>

    Improve tarball creation when using the command: python setup.py sdist

2009-03-18 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix typo in utils.py.

2009-03-18 Francesco Fumanti <francesco.fumanti@gmx.net>

    Syncronize with revision 137 of lp:onboard.

2009-03-17 Chris Jones <chris.e.jones@gmail.com>

    Stop settings dialog from creating its own OnboardGtk instance to fix bug
    where an extra IconPalette would appear when the settings dialog was open.

2009-03-07 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix typo in __init__ of Pane class.

2009-03-02 Francesco Fumanti <francesco.fumanti@gmx.net>

    Add more logging messages and unify logging syntax.

2009-02-27 Francesco Fumanti <francesco.fumanti@gmx.net>

    Restore handling of the in_use gconf key of IconPalette.

2009-02-24 Francesco Fumanti <francesco.fumanti@gmx.net>

    Remove unused variable from the IconPalette module.

2009-02-24 Francesco Fumanti <francesco.fumanti@gmx.net>

    Add docstrings to the IconPalette module.

2009-02-15 Francesco Fumanti <francesco.fumanti@gmx.net>
