@@ -1,0 +1,3 @@
+../data/settings.glade
+../Onboard/settings.py
+
